# internal_ace_compiler

./: .gitignore  Cargo.toml  License.md  README.md  build.rs  package-lock.json
src/: main.rs
src/checks/: check_installation.rs  check_modules.rs  check_update.rs  check_version.rs
src/commands/: download.rs  install.rs  process.rs  uninstall.rs
src/methods/: execution.rs
src/utils/: sigcheck.rs
