[package]
name = "ace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.13", features = ["blocking"] }
windows = "0.10.0"
md5 = "0.7.0"

[build-dependencies]
windows = "0.10.0"
